Correction TDs maybe 0.25em is needed on all sides for left aligned texts

--- a/css/journal.css
+++ b/css/journal.css
@@ -419,7 +419,7 @@ form button {
     background-color: transparent;
 }
 .sheet.journal-entry .journal-entry-page td{
-    padding: 0.25em 0;
+    padding: 0.25em;
 }
 /*...................................................................*/
 /*Formatting of Blockcode Torg-Style*/
